--- a/06_effect/index.css
+++ b/06_effect/index.css
@@ -16,35 +16,49 @@ img {
 .effect {
     display: flex;
     flex-wrap: wrap;
-  padding: 8% 6%;
+    justify-content: center;
 }
 .effect__contents {
     position: relative;
-    width: 50%;
-      overflow: hidden;
+    width: calc(50% - 4%);
+    border: 20px solid #ddd;
+    box-sizing: border-box;
+    margin: 1%;
+    overflow: hidden;
 }
 .effect__contents__index {
     position: absolute;
     top: 9%;
     left: 8%;
+    z-index: 2;
 }
 .effect__contents__index__text {
     font-size: 0.8em;
     font-weight: normal;
 }
-.effect__contents__element {
-    border: 20px solid #ddd;
-    box-sizing: border-box;
-    margin: 2%;
-}
 .first_image:hover {
   transform: scale(1.2, 1.2);
 }
+.second_image {
+    height: 100%;
+    width: 100%;
+    background-image: url(./common/img/cat_sumple.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
 .second_image:hover {
     content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     filter: blur(6px);
     height: auto;
-    width: 100%;
+    width: calc(100% + 2%);
+    margin: -1%;
 }
 .third_image:hover {
     filter: grayscale(1);
