--- a/04_font/index.css
+++ b/04_font/index.css
@@ -22,7 +22,14 @@ img {
     margin-top: 2%;
 }
 .contents__text {
+    font-size: 15px;
     margin-top: 2%;
+}
+.contents__text span {
+    font-style: oblique;
+}
+.contents__text em {
+    font-style: oblique;
 }
 .contents__supplement {
     margin-top: 4%;
@@ -35,9 +42,27 @@ img {
 }
 .book__info {
     display: flex;
+    width: 88%;
+    margin-top: 2%;
 }
-.book__info__detail__img {
-    width: 55%;
+.book__info__detail {
+    margin-right: 4%;
+}
+.supplement__ytube__margin {
+  margin-top: 4%;
+}
+.ytube {
+  position:relative;
+  width: 66%;
+  padding-top: 37%;
+  margin-top: 2%;
+}
+.ytube iframe {
+  position:absolute;
+  top:0;
+  right:0;
+  width:100%;
+  height:100%;
 }
 .contact {
     margin-top: 4%;
