--- a/03_recommend/index.css
+++ b/03_recommend/index.css
@@ -58,8 +58,13 @@ a {
   margin-top: 3%;
 }
 .evaluation__star {
+  display: flex;
+  list-style-type: none;
   width: 70%;
-  margin-right: 12%;
+  margin-right: 20%;
+}
+.evaluation__star__detail {
+  width: 2.8vh;
 }
 .evaluation__star__average {
   color: #00e;
