【02_form】submit手前まで作成, 必須タグは未確認

--- a/02_form/index.css
+++ b/02_form/index.css
@@ -57,6 +57,9 @@ img {
   padding: 0 5%;
   color: #fff;
 }
+.text__frame {
+    height: 3vh;
+}
 .contents__table__option {
   background-color: transparent;
 }
@@ -89,4 +92,155 @@ img {
 }
 .about_link {
   padding: 2% 0;
+}
+
+/* 2つめtable */
+.table_margin {
+    margin-top: 4%;
+}
+.adress__index {
+    padding: 10% 2%;
+}
+.postal {
+    display: flex;
+    align-items: center;
+}
+.postal::before {
+    content: "〒";
+    margin-right: 1%;
+}
+.postal__search {
+    margin-left: 2%;
+}
+.postal__attention::before {
+    content: "※";
+}
+.adress {
+    display: inline-grid;
+    margin-top: 2%;
+}
+.adress__box {
+    height: 4vh;
+    width: 7vw;
+    cursor: pointer;
+}
+.adress__frame {
+    width: 40vw;
+    margin-top: 2%;
+}
+.building_type {
+    height: 4vh;
+    width: 10vw;
+    cursor: pointer;
+}
+.building_floor {
+    height: 4vh;
+    width: 10vw;
+    cursor: pointer;
+    margin-left: 2%;
+}
+.transportation {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+}
+.transportation__short_element {
+    width: 20%;
+}
+.transportation__long_element {
+    width: 28%;
+}
+.contents__table__transportation {
+    background-color: transparent;
+    padding: 4% 2%;
+}
+.name_index {
+    padding: 4% 2%;
+}
+.info__flex {
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    padding: 3%;
+}
+.info__flex__box {
+    width: 50%;
+}
+.info__family::before{
+    content: "姓";
+    margin: 0 2% 0 6%;
+}
+.info__name::before{
+    content: "名";
+    margin: 0 2% 0 6%;
+}
+.info__kana_family {
+    margin-top: 2%;
+}
+.info__kana_family::before{
+    content: "セイ";
+    margin-right: 2%;
+}
+.info__kana_name {
+    margin-top: 2%;
+}
+.info__kana_name::before{
+    content: "メイ";
+    margin-right: 2%;
+}
+.info__name__text {
+    height: 3vh;
+    width: 16vw;
+}
+.tel_index {
+    padding: 3% 2%;
+}
+.tel_frame {
+    height: 3vh;
+    width: 30vw;
+}
+.tel_attention::before{
+    content: "※";
+}
+.mail__frame {
+    height: 3vh;
+    width: 30vw;
+}
+.contents_position {
+    position: relative;
+}
+.input_contact {
+    margin-right: 2%;
+    cursor: pointer;
+}
+.contents__table__contact {
+    background-color: transparent;
+    padding: 4% 2%;
+}
+.contact__attention::before {
+    content: "※";
+    position: absolute;
+    bottom: 40%;
+    left: auto;
+}
+.contact__attention__text {
+    padding-left: 2%;
+}
+.contents__table__other {
+    background-color: transparent;
+    padding: 10% 2%;
+}
+.other__textarea {
+    height: 23vh;
+    width: 58vw;
+}
+.other__attention::before {
+    content: "※";
+}
+.btn {
+    width: 32%;
+    margin: 2% auto 0;
+}
+.confirmation::before {
+    content: "※";
 }
