--- a/02_form/index.css
+++ b/02_form/index.css
@@ -18,6 +18,7 @@ img {
 }
 .contents__ttl {
   width: 50%;
+  overflow: hidden;
 }
 .contents__table {
   border-collapse: collapse;
@@ -244,8 +245,12 @@ img {
 .confirmation::before {
   content: "※";
 }
+.submit {
+    width: 100%;
+    height: 10vh;
+    overflow: hidden;
+}
 .submit__btn {
   display: block;
   width: 100%;
-  height: auto;
 }
